// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: show bar 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: Function
      ],
      next: [
        Node {
          seq: [
            check: defined,
            update: {
              store: {
                state: foo | 1 | 11
              }
            },
            check: changed,
            update: {
              store: {
                state: foo | 1 | 11
              }
            }
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                compute: Function,
                check: defined,
                check: changed
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    update: {
                      store: {
                        state: 12
                      }
                    },
                    check: changed,
                    update: {
                      store: {
                        state: 12
                      }
                    }
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    Node {
      seq: [
        run: watcher
      ],
      next: []
    }
  ]
}"
`;

exports[`graphite: show bar 2`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: Function
      ],
      next: [
        Node {
          seq: [
            check: defined,
            update: {
              store: {
                state: foo | 1 | 11
              }
            },
            check: changed,
            update: {
              store: {
                state: foo | 1 | 11
              }
            }
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                compute: Function,
                check: defined,
                check: changed
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    update: {
                      store: {
                        state: 12
                      }
                    },
                    check: changed,
                    update: {
                      store: {
                        state: 12
                      }
                    }
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: Function
      ],
      next: [
        Node {
          seq: [],
          next: [
            Node {
              seq: [
                compute: Function
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    update: {
                      store: {
                        state: foo | 1 | 11 | 101
                      }
                    },
                    check: changed,
                    update: {
                      store: {
                        state: foo | 1 | 11 | 101
                      }
                    }
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        compute: Function,
                        check: defined,
                        check: changed
                      ],
                      next: [
                        Node {
                          seq: [
                            check: defined,
                            update: {
                              store: {
                                state: 18
                              }
                            },
                            check: changed,
                            update: {
                              store: {
                                state: 18
                              }
                            }
                          ],
                          next: [
                            Node {seq: [], next: []}
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store1 1`] = `
"Node {
  seq: [
    check: defined,
    update: {
      store: {
        state: foo | 1 | 11 | 101
      }
    },
    check: changed,
    update: {
      store: {
        state: foo | 1 | 11 | 101
      }
    }
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        compute: Function,
        check: defined,
        check: changed
      ],
      next: [
        Node {
          seq: [
            check: defined,
            update: {
              store: {
                state: 18
              }
            },
            check: changed,
            update: {
              store: {
                state: 18
              }
            }
          ],
          next: [
            Node {seq: [], next: []}
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store2 1`] = `
"Node {
  seq: [
    check: defined,
    update: {
      store: {
        state: 18
      }
    },
    check: changed,
    update: {
      store: {
        state: 18
      }
    }
  ],
  next: [
    Node {seq: [], next: []}
  ]
}"
`;

exports[`showcase: event foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: Function
      ],
      next: [
        Node {
          seq: [
            check: defined,
            update: {
              store: {
                state: 3
              }
            },
            check: changed,
            update: {
              store: {
                state: 3
              }
            }
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                check: defined,
                filter: Function,
                tap: {},
                tap: {},
                barrier: {
                  barrierID: 1,
                  priority: barrier
                },
                compute: Function
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    update: {
                      store: {
                        state: {
                          a: 3,
                          b: 6
                        }
                      }
                    },
                    check: changed,
                    update: {
                      store: {
                        state: {
                          a: 3,
                          b: 6
                        }
                      }
                    }
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        compute: Function,
                        check: defined,
                        check: changed
                      ],
                      next: [
                        Node {
                          seq: [
                            check: defined,
                            update: {
                              store: {
                                state: 3
                              }
                            },
                            check: changed,
                            update: {
                              store: {
                                state: 3
                              }
                            }
                          ],
                          next: [
                            Node {seq: [], next: []},
                            Node {
                              seq: [
                                run: watcher
                              ],
                              next: []
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`showcase: mapped 1`] = `
"Node {
  seq: [
    check: defined,
    update: {
      store: {
        state: 3
      }
    },
    check: changed,
    update: {
      store: {
        state: 3
      }
    }
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        run: watcher
      ],
      next: []
    }
  ]
}"
`;

exports[`showcase: store a 1`] = `
"Node {
  seq: [
    check: defined,
    update: {
      store: {
        state: 3
      }
    },
    check: changed,
    update: {
      store: {
        state: 3
      }
    }
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        check: defined,
        filter: Function,
        tap: {},
        tap: {},
        barrier: {
          barrierID: 1,
          priority: barrier
        },
        compute: Function
      ],
      next: [
        Node {
          seq: [
            check: defined,
            update: {
              store: {
                state: {
                  a: 3,
                  b: 6
                }
              }
            },
            check: changed,
            update: {
              store: {
                state: {
                  a: 3,
                  b: 6
                }
              }
            }
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                compute: Function,
                check: defined,
                check: changed
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    update: {
                      store: {
                        state: 3
                      }
                    },
                    check: changed,
                    update: {
                      store: {
                        state: 3
                      }
                    }
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        run: watcher
                      ],
                      next: []
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;
